<resources>
    <string name="app_name">Mortahil_FatimaIMDbAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Top 10</string>
    <string name="menu_gallery">Favoritas</string>
    <string name="menu_slideshow">Buscar Película</string>
    <string name="client_id">376303472743-650fkfkt4til29lermkgr9b38aqd5fr8.apps.googleusercontent.com</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="caratula">Caratula</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="fecha">Fecha estreno</string>
    <string name="puntuacion">Puntuacion</string>
    <string name="buttonSms">Enviar por SMS</string>
    <string name="buttonCompartir">Compartir</string>
    <string name="buttonBuscar">Buscar</string>


    <string name="facebook_app_id">1707255313543948</string>
    <string name="fb_login_protocol_scheme">fb1707255313543948</string>
    <string name="facebook_client_token">5f0ffed8c0fa3ac5e21e8638b60a56d</string>
    <string name="action_edit_user">Edit User</string>

</resources>